enable autorelay debug logging

--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -43,7 +43,12 @@ jobs:
           # Use -coverpkg=./..., so that we include cross-package coverage.
           # If package ./A imports ./B, and ./A's tests also cover ./B,
           # this means ./B's coverage will be significantly higher than 0%.
-          run: go test -v -coverprofile=module-coverage.txt -coverpkg=./... ./...
+          run: |
+            GOLOG_LOG_LEVEL="autorelay=debug" go test -v -coverprofile=module-coverage.txt -coverpkg=./... ./...
+            GOLOG_LOG_LEVEL="autorelay=debug" go test -v -coverprofile=module-coverage.txt -coverpkg=./... ./...
+            GOLOG_LOG_LEVEL="autorelay=debug" go test -v -coverprofile=module-coverage.txt -coverpkg=./... ./...
+            GOLOG_LOG_LEVEL="autorelay=debug" go test -v -coverprofile=module-coverage.txt -coverpkg=./... ./...
+            GOLOG_LOG_LEVEL="autorelay=debug" go test -v -coverprofile=module-coverage.txt -coverpkg=./... ./...
       - name: Run tests (32 bit)
         if: ${{ matrix.os != 'macos' }} # can't run 32 bit tests on OSX.
         uses: protocol/multiple-go-modules@v1.2
@@ -52,12 +57,18 @@ jobs:
         with:
           run: |
             export "PATH=${{ env.PATH_386 }}:$PATH"
-            go test -v ./...
+            GOLOG_LOG_LEVEL="autorelay=debug" go test -v ./...
+            GOLOG_LOG_LEVEL="autorelay=debug" go test -v ./...
+            GOLOG_LOG_LEVEL="autorelay=debug" go test -v ./...
       - name: Run tests with race detector
         if: ${{ matrix.os == 'ubuntu' }} # speed things up. Windows and OSX VMs are slow
         uses: protocol/multiple-go-modules@v1.2
         with:
-          run: go test -v -race ./...
+          run: |
+            GOLOG_LOG_LEVEL="autorelay=debug" go test -v -race ./...
+            GOLOG_LOG_LEVEL="autorelay=debug" go test -v -race ./...
+            GOLOG_LOG_LEVEL="autorelay=debug" go test -v -race ./...
+            GOLOG_LOG_LEVEL="autorelay=debug" go test -v -race ./...
       - name: Collect coverage files
         shell: bash
         run: echo "COVERAGES=$(find . -type f -name 'module-coverage.txt' | tr -s '\n' ',' | sed 's/,$//')" >> $GITHUB_ENV
